Fixed huge gap in main menu drop downs

--- a/styles.css
+++ b/styles.css
@@ -567,7 +567,6 @@ body {
 }
 
 .ingredients ul{
-  height:100px;
   vertical-align:left;
   align-items: left;
 }
